--- a/accommodation.html
+++ b/accommodation.html
@@ -33,86 +33,160 @@
     <br>
     <h1>Accommodation</h1>
     <br>
-    <h2>Chateau de Bonnemare</h2>
+    <h2>Château de Bonnemare</h2>
     <p>990 Chemin de Bacqueville,<br>
-    27380 Radepont</p>
+      27380 Radepont,<br>
+      Normandy, France
+    </p>
     <br>
     <h2>Accommodation nearby</h2>
     <p>
-      There are lots of places to stay within a 10-15 minute drive of the chateau.<br>
-      We've listed our favourites below and given it will be holiday season, we recommend booking as soon as you can.<br>
-      They all speak English so do not be worried about getting in touch with them. <br>
+      There are lots of places to stay within a 10-15 minute drive of the château. We've listed a number below.<br>
+      Many of the places have a flexible cancellation policy and refundable desposits until much closer to the time. <br>
       </p>
     </div>
+
+    <div style="height:400px; width:100%; display:inline-block; overflow:hidden;">
+    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1ynP4j4yNU8RI_NRr4l4xIsG4NXkkBwQt" width="80%" height="450" frameborder="0" style="position:relative; top:-50px; border:none;"></iframe>
+    </div>
+
+<br><br><br>
 
     <div class="container">
   <div class="row">
     <div class="col-sm">
-      <h3>Place 1</h3>
-      <p>Address<br>
-      Address<br>
-      <a href="mailto:email@address.com">email@address.com</a></p>
-    </div>
-    <div class="col-sm">
-      <h3>Place 2</h3>
-      <p>Address<br>
-      Address<br>
-      <a href="mailto:email@address.com">email@address.com</a></p>
-    </div>
-    <div class="col-sm">
-      <h3>Place 3</h3>
-      <p>Address<br>
-      Address<br>
-      <a href="mailto:email@address.com">email@address.com</a></p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm">
-    <h3>Place 4</h3>
-    <p>Address<br>
-    Address<br>
-    <a href="mailto:email@address.com">email@address.com</a></p>
+    <h3>1. Les Rives de l'Andelle</h3>
+    <p>Les Rives de l’Andelle<br>
+    27610 Romilly sur Andelle<br>
+    <tel>(+33) 02 32 48 25 40<tel><br>
+    <a href="mailto:pascale.gerard12@orange.fr">pascale.gerard12@orange.fr</a></p>
   </div>
   <div class="col-sm">
-    <h3>Place 5</h3>
-    <p>Address<br>
-    Address<br>
-    <a href="mailto:email@address.com">email@address.com</a></p>
+    <h3>2. Maison de Maître</h3>
+    <p>Rue du Général De Gaulle<br>
+    27380 Fleury sur Andelle<br>
+    <tel>(+33) 06 77 67 14 77</tel><br>
+    <a href="sylviemasson27380@orange.fr">sylviemasson27380@orange.fr</a></p>
   </div>
   <div class="col-sm">
-    <h3>Place 6</h3>
-    <p>Address<br>
-    Address<br>
-    <a href="mailto:email@address.com">email@address.com</a></p>
+    <h3>3. Gîte de Charleval</h3>
+    <p>47 Rue de la Fontaine Bulant<br>
+     27380 Charleval<br>
+     <tel>(+33) 02 32 49 20 48</tel><br>
+    <a href="mailto:liliane.lebaube@orange.fr">liliane.lebaube@orange.fr</a></p>
   </div>
+  <div class="col-sm">
+  <h3>4. Gîte du Vanicol</h3>
+  <p>14 rue des Rosiers<br>
+  27440 Houville en Vexin<br>
+<tel>(+33) 02 32 39 53 38</tel><br>
+</div>
+<div class="col-sm">
+  <h3>5. Le Clos du Boele</h3>
+  <p>8 Place du Cloitre<br>
+  27440 Ecouis<br>
+  <tel>(+33) 09 54 08 33 70</tel><br>
+  <a href="mailto:leclosduboele@free.fr">leclosduboele@free.fr</a></p>
+</div>
+</div>
+    <br>
+<div class="row">
+<div class="col-sm">
+  <h3>6. La Maison Blanche</h3>
+  <p>19 route de Paris<br>
+  27440 Ecouis<br>
+  <tel>(+33) 02 32 69 59 76 </tel><br>
+  <a href="mailto:carolinedesaintemarie@gmail.com">carolinedesaintemarie@gmail.com</a></p>
+</div>
+<div class="col-sm">
+  <h3>7. Château de Heuqeville</h3>
+  <p>3 place des Tilleuls<br>
+  27700 Heuqueville<br>
+  <tel>(+33) 02 32 39 53 38</tel><br>
+  <a href="http://www.chateau-fort-manoir-chateau.eu/chateaux-eure-chateau-a-heuqueville-chateau-d-heuqueville.html"  target="_blank">Website link</a></p>
+</div>
+<div class="col-sm">
+  <h3>8. Logis Au Relais de la Lieure</h3>
+  <p>1 Rue du Général de Gaulle<br>
+  27850 Ménesqueville<br>
+  <a href="https://www.hotels.com/ho745190816/?q-check-out=2021-08-30&FPQ=2&q-check-in=2021-08-27&WOE=1&WOD=5&q-room-0-children=0&pa=1&tab=description&JHR=3&q-room-0-adults=2&YGF=14&rateplanid=282165337&MGT=3&ZSX=0&SYE=3"  target="_blank">Website link</a></p>
+</div>
+<div class="col-sm">
+  <h3>9. Maison - Coeur Forêt Lyons</h3>
+  <p>Rosay-sur-Lieure<br>
+  Normandie, France<br>
+  <a href="https://www.airbnb.com/rooms/43495882?adults=4&check_in=2021-08-26&check_out=2021-08-30&source_impression_id=p3_1610744093_KjIe7ZZ8jDxFjq6o&guests=1"  target="_blank">Website link</a></p>
+</div>
+<div class="col-sm">
+  <h3>10. La Chaumière des Deux Amants</h3>
+  <p>Vatteville<br>
+  Normandie, France<br>
+  <a href="https://www.airbnb.com/rooms/22955917?adults=4&check_in=2021-08-26&check_out=2021-08-30&source_impression_id=p3_1610745289_4b5qWdB525CnAPbP&guests=1"  target="_blank">Website link</a></p>
+</div>
 </div>
 <div class="row">
   <div class="col-sm">
-  <h3>Place 7</h3>
-  <p>Address<br>
-  Address<br>
-  <a href="mailto:email@address.com">email@address.com</a></p>
-</div>
-<div class="col-sm">
-  <h3>Place 8</h3>
-  <p>Address<br>
-  Address<br>
-  <a href="mailto:email@address.com">email@address.com</a></p>
-</div>
-<div class="col-sm">
-  <h3>Place 9</h3>
-  <p>Address<br>
-  Address<br>
-  <a href="mailto:email@address.com">email@address.com</a></p>
-</div>
-</div>
-</div>
-
-
-      <div class="container-fluid">
-    <br>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d166406.02764551417!2d1.1934431161350023!3d49.33143567523643!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e12a3b5cd5b0c3%3A0xa50cc0fbf57b7181!2sBonnemare%20Castle%20Bed%20and%20Breakfast%20Normandy%20Bed%20%26!5e0!3m2!1sen!2sfr!4v1586085154512!5m2!1sen!2sfr" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-<br>
+    <h3>11. Le Moulin De Connelles</h3>
+    <p>40 Route D'Amfreville Sous Les Monts<br>
+    27430 Connelles<br>
+    <a href="http://www.booking.com/Share-Lq81kS"  target="_blank">Website link</a></p>
   </div>
-
+  <div class="col-sm">
+    <h3>12. Chambres D'Hôtes La Villa Aliénor</h3>
+    <p>Rue Grande<br>
+    27700 Les Andelys<br>
+    <a href="http://www.booking.com/Share-4qKTFn" target="_blank">Website link</a></p>
+  </div>
+  <div class="col-sm">
+    <h3>13. Auberge de la Roque</h3>
+    <p>77 Route de Muids<br>
+    27700 La Roque<br>
+    <a href="http://www.aubergedelaroque.fr/chambre-hotes.php" target="_blank">Website link</a></p>
+  </div>
+  <div class="col-sm">
+    <h3>14. Maison - Vézillon</h3>
+    <p>Vézillon<br>
+    Normandie<br>
+    <a href="https://www.airbnb.com/rooms/29652600?adults=10&check_in=2021-08-26&check_out=2021-08-30&source_impression_id=p3_1610745527_rK3PiAhFMwOB5BZu&guests=10" target="_blank">Website link</a></p>
+  </div>
+  <div class="col-sm">
+    <h3>15. La Maison Normandelys</h3>
+    <p>Les Andelys<br>
+    Normandie<br>
+    <a href="https://www.airbnb.com/rooms/39198690?adults=4&check_in=2021-08-26&check_out=2021-08-30&source_impression_id=p3_1610745963_h9psF4rRuogMibEP" target="_blank">Website link</a></p>
+  </div>
+  </div>
+  <div class="row">
+    <div class="col-sm">
+      <h3>16. Lin & L'hote</h3>
+      <p>1159 Rue des Andelys<br>
+      76520 La Neuville Chant d'Oisel<br>
+      <a href="https://www.booking.com/hotel/fr/lin-amp-l-39-hote.fr.html?aid=1538900;label=metahometogo-link-metafr_wl-hotel-3931515_xqdz-c8a7432e34714a54eee06c386a5f501c_dev-dsk_los-7_ver-vr_br-hh;sid=3a2d718595c4728e5d6bd37317e09c30;atlas_src=hp_iw_title&checkin=2021-08-27&checkout=2021-08-30&dist=0&group_adults=2&group_children=0&no_rooms=1&room1=A%2CA&sb_price_type=total&srepoch=1610746873&srpvid=95ff985db00e011c&type=total&" target="_blank">Website link</a></p>
+    </div>
+    <div class="col-sm">
+      <h3>17. La Maison des Oiseaux</h3>
+      <p>22 Rue des Bruyères du Fayel<br>
+      27380 Vandrimare<br>
+      <a href="https://www.gites.fr/gites_gite-5-personnes-la-maison-des-oiseaux_vandrimare_63877.htm" target="_blank">Website link</a></p>
+    </div>
+    <div class="col-sm">
+      <h3>18. Villa - Douville sur Andelle</h3>
+      <p>44 Rue du Cardinal Amette<br>
+      27380 Douville sur Andelle<br>
+      <a href="https://www.gites.fr/gites_domaine--villa-piscine-chauffee-tennis-50-activites_douville-sur-andelle_65680.htm" target="_blank">Website link</a></p>
+    </div>
+    <div class="col-sm">
+      <h3>19. Gite de la Baguelande</h3>
+      <p>44 Rue du Cardinal Amette<br>
+      27380 Douville sur Andelle<br>
+      <a href="https://www.booking.com/hotel/fr/gite-de-la-baguelande.fr.html?aid=1490324;label=gite;sid=3a2d718595c4728e5d6bd37317e09c30;all_sr_blocks=284700501_202218440_4_1_0;checkin=2021-08-27;checkout=2021-08-30;dest_id=-1443226;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=1;highlighted_blocks=284700501_202218440_4_1_0;hpos=1;no_rooms=1;room1=A%2CA;sb_price_type=total;sr_order=popularity;sr_pri_blocks=284700501_202218440_4_1_0__51960;srepoch=1610747964;srpvid=2bd89a9d5ca20198;type=total;ucfs=1&#hotelTmpl" target="_blank">Website link</a></p>
+    </div>
+    <div class="col-sm">
+      <h3>20. Western Life</h3>
+      <p>116 rue Blingue<br>
+      27610 Romilly sur Andelle<br>
+      <a href="https://www.airbnb.fr/rooms/6889378?source_impression_id=p3_1600526738_vvYJfsS81LEsPxo8" target="_blank">Website link</a></p>
+    </div>
+</div>
+</div>
   </body>
