--- a/giftlist.html
+++ b/giftlist.html
@@ -36,12 +36,13 @@
 
   <div class="container">
     <br>
-    <p>No gifts please.<br>
+    <p>No gifts please!<br>
       <br>
-      Your presence is already generous enough! <br>
+      We appreciate you will already be travelling to join us, <br>
+      which is very generous already. <br>
     </p>
-<br><br><br>
+<br><br><br><br><br>
     <div class="container">
-    <img class="Hearts" class="center" src="Images/Hearts.png" alt="Hearts" width=300px>
+    <img class="Hearts" class="center" src="Images/Hearts.png" alt="Hearts" width=550px>
     </div>
   </body>
