--- a/the-plan.html
+++ b/the-plan.html
@@ -29,25 +29,25 @@
   </header>
 
   <body>
-  <div class="container-fluid">
-    <br>
+    <div class="container-fluid">
+      <br>
     <h1>The Plan</h1>
-  </div>
-  <div class="container">
-    <h2>The big day</h2>
-    <h3>Chateau de Bonnemare</h3>
-    <p>We'll hold the ceremony at 2pm. Please aim to be there by 1:30pm<br>
-      Dinner, drinks and dancing will continue into the night!<br></p>
-      <p>Dress code is summer garden party.</p>
-    <p>We will have a taxi service on hand for the weekend to shuttle between accommodation and the chateau.<br>
-      However we anticipate everyone will want to use this at the same time to get to the ceremony, so we suggest driving there if you can! There is parking available on site.</p>
-    <br>
-    <h2>The rest of the weekend</h2>
-    <p>We would love for you to join us for the weekend if you can. We have use of the chateau grounds Friday afternoon - Monday morning.<br>
-    <p>  <b>Friday:</b> If you arrive early, join us for a relaxed evening drink (to settle Ali's nerves...)<br>
-      <b>Saturday:</b> The big day<br>
-      <b>Sunday:</b> Afternoon BBQ and highland games<br></p>
     </div>
+  <div class="container">
+    <br>
+    <h2>The weekend</h2>
+    <p>We have use of the château from Friday to Monday and would love for you to join us for the weekend if you can. <br><br>
+      <h2>Saturday 28<sup>th</sup> August</h2>
+      <p><i class="fas fa-map-pin"></i> Château de Bonnemare, 27380 Radepont<br>
+        <i class="far fa-clock"></i> Ceremony at 2pm, aim to arrive by 1:30pm<br>
+        <i class="fas fa-female"></i> Dress code is summer garden party<br>
+        <i class="fas fa-music"></i> Dinner, drinks and dancing to follow, continuing into the night<br></p>
+<br>
+      <h2> Sunday 29<sup>th</sup> August</h2>
+      <p><i class="fas fa-hotdog"></i> Blow away the cobwebs with a <br>
+        lunchtime BBQ and highland games.</p>
+    </div>
+
 
 
   </body>
