--- a/travel.html
+++ b/travel.html
@@ -37,28 +37,37 @@
   <div class="container">
     <br>
     <h2>Getting there</h2>
-      We recommend booking all travel as early as you can.<br>
-      If you are having any problems planning your journey, please let us know!<br>
-
+    <div class="container">
+  <div class="row">
+    <div class="col-sm">
     <p><h3><i class="fas fa-plane"></i> Fly</h3>
-      Charles de Gaulle is the closest international airport to the chateau.<br>
-      From there we recommend hiring a car (1.5 hour drive).<br>
-      There is a train from Paris St. Lazare to Val de Reuil (approx. 30 mins from the chateau) but you would need to travel across Paris first.<br></p>
-
+      Charles de Gaulle is the closest international airport.<br>
+      From there we recommend hiring a car or booking a taxi (approx. 1.5 hour drive).<br>
+      Alternatively, there is a train from Paris St. Lazare to Val de Reuil (approx. 30 mins drive).<br></p>
+      </div>
+        <div class="col-sm">
       <p><h3><i class="fas fa-subway"></i> Eurostar<br></h3>
-      Similar to above, if you take the Eurostar to Paris Gare du Nord, you can then hire a car or take the train to Val de Reuil.<br></p>
-
+      You can take the Eurostar to Paris Gare du Nord.<br>
+      From there we recommend hiring a car or booking a taxi (approx. 1.5 hour drive).<br>
+      Alternatively, there is a train from Paris St. Lazare to Val de Reuil (approx. 30 min drive). <br></p>
+</div>
+  <div class="col-sm">
       <p><h3><i class="fas fa-anchor"></i> Ferry<br></h3>
       There are multiple ferry options, all with slightly different crossing and drive times.<br>
       Newhaven > Dieppe (+1.5 hour drive)<br>
       Portsmouth > Le Havre (+1.5 hour drive)<br>
       Portsmouth > Caen (+2 hour drive)<br></p>
+</div>
+</div>
+      If you are having any problems planning your journey, please let us know. We've done lots of research and can put you in touch with each other to share transfers!
   </div>
+  <br>
   <div class="container">
     <br>
     <h2>During the weekend</h2>
     <p>
-      We will have a taxi service on hand for the weekend to shuttle between accommodation and the chateau.<br>
+      There is parking available at the chateau.<br>
+      We will have a taxi service available for the weekend to shuttle between accommodation and the chateau.<br>
       We'll add the contact details for the taxi closer to the time.<br>
     </p>
     </div>
