--- a/rsvp.html
+++ b/rsvp.html
@@ -32,22 +32,41 @@
   <div class="container-fluid">
     <br>
     <h1>RSVP</h1>
-    <br>
-    <form>
-  <form action="process-form-data.php" method="post">
-  <label for="name">Name:</label>
-  <input type="text" id="name" name="name"><br>
-  <label for="lname">Last name:</label>
-  <input type="text" id="lname" name="lname"><br>
-  <input type="submit" value="Submit">
-  We are likely to join for a drink on the Friday
-  We are likely to stay for the Sunday BBQ.
+  </div>
+  <p>Please let us know by the end of April 2021 if you plan to join us.  </p>
 
+<div class="container">
+    <div class="contact">
+    <form action="action_page.php">
 
+      <label for="name">Name</label>
+      <input type="text" id="name" name="name" placeholder="Full name">
 
-</form>
+      <label for="guests">Please provide the names of all guests you are responding on behalf of:</label>
+      <textarea id="guests" name="guests" placeholder="Full name(s)" style="height:100px"></textarea>
 
+      <label for="ceremony_response">Will you be joining us for the Saturday ceremony & dinner? </label>
+      <select id="ceremony_response" name="ceremony_response">
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
 
+      <label for="bbq_response">Will you be joining us for the Sunday lunchtime BBQ? </label>
+      <select id="bbq_response" name="bbq_response">
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <label for="dietary">Dietary requirements</label>
+      <textarea id="dietary" name="dietary" placeholder="e.g. allergies, vegetarian, vegan" style="height:50px"></textarea>
+
+      <label for="notes">Notes</label>
+      <textarea id="notes" name="notes" placeholder="Anything else you'd like us to know?" style="height:100px"></textarea>
+
+      <input type="submit" value="Submit">
+
+    </form>
+  </div>
   </div>
 
 
