--- a/test.html
+++ b/test.html
@@ -1,8 +1,7 @@
 <DOCTYPE html>
 
   <head>
-      <title>Emily and Ali Get Married</title>
-      <link rel="icon" type="image/png" href="/Images/Castle.png"/>
+      <title>Emily and Ali Wedding</title>
       <link rel="stylesheet" type="text/css" href="bootstrap-css/bootstrap.css">
       <link rel="stylesheet" type="text/css" href="index.css">
       <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@100&display=swap" rel="stylesheet">
@@ -13,7 +12,7 @@
 
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Home</a>
+        <a class="navbar-brand" href="index.html">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -23,31 +22,14 @@
           <a class="nav-item nav-link" href="travel.html">Travel</a>
           <a class="nav-item nav-link" href="accommodation.html">Accommodation</a>
           <a class="nav-item nav-link" href="giftlist.html">Giftlist</a>
-          <a class="nav-item nav-link" href="rsvp.html">RSVP</a>
-       </div>
-      </div>
-      </nav>
-        </header>
+          <a class="nav-item nav-link active" href="rsvp.html">RSVP <span class="sr-only">(current)</span></a>
+ </div>
+</div>
+</nav>
+  </header>
 
 <body>
 <div class="container-fluid">
-  <br>
-  <h1>We're Getting Married!</h1>
-  <h2>28<sup>th</sup>- 29<sup>th</sup> August 2021</h2>
-  <h3>Château de Bonnemare<br>
-      Normandy, France</h3>
-</div>
-
-<br>
-
-<div class="container-sm">
-    <p>We would love for you to join us for a weekend in the French countryside, to celebrate our wedding on Saturday 28th August.</p>
-    <p>We appreciate that at the moment this feels a little ambitious, but we have our fingers crossed and remain optimistic that by the summer things will be better, and we'll be able to celebrate with all of you at the end of August. Fortunately, a lot of the nearby accommodation is fully refundable until closer to the time.</p>
-    <p>For now, we are planning as if it will go ahead and will let you know if anything changes.</p>
-</div>
-
-<div class="container">
-<img class="Bottles" class="center" src="Images/Line_bottles.png" alt="Wedding Bottles" width=450px>
+<iframe src="https://shifttechnologies.poc.gooddata.com/dashboards/embedded/#/project/da11igeejtmxkbglg5g51w75llq056f2/dashboard/afmNlKnLc52i" frameborder="0" width="1500" height="5000" id="frame"></iframe>
 </div>
 </body>
-<br>
