--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 
   <head>
       <title>Emily and Ali Get Married</title>
-      <link rel="icon" type="image/png" href="/Images/Castle.png"/>
       <link rel="stylesheet" type="text/css" href="bootstrap-css/bootstrap.css">
       <link rel="stylesheet" type="text/css" href="index.css">
       <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@100&display=swap" rel="stylesheet">
@@ -33,6 +32,7 @@
 <div class="container-fluid">
   <br>
   <h1>We're Getting Married!</h1>
+  <br>
   <h2>28<sup>th</sup>- 29<sup>th</sup> August 2021</h2>
   <h3>Château de Bonnemare<br>
       Normandy, France</h3>
@@ -44,10 +44,7 @@
     <p>We would love for you to join us for a weekend in the French countryside, to celebrate our wedding on Saturday 28th August.</p>
     <p>We appreciate that at the moment this feels a little ambitious, but we have our fingers crossed and remain optimistic that by the summer things will be better, and we'll be able to celebrate with all of you at the end of August. Fortunately, a lot of the nearby accommodation is fully refundable until closer to the time.</p>
     <p>For now, we are planning as if it will go ahead and will let you know if anything changes.</p>
-</div>
-
-<div class="container">
-<img class="Bottles" class="center" src="Images/Line_bottles.png" alt="Wedding Bottles" width=450px>
+    <p>Emily & Ali<br>xx</p>
+<img class="Bottles" class="center" src="Images/Line_bottles.png" alt="Wedding Bottles" width=350px>
 </div>
 </body>
-<br>
