--- a/travel.html
+++ b/travel.html
@@ -42,7 +42,7 @@
     <div class="col-sm">
     <p><h3><i class="fas fa-plane"></i> Fly</h3>
       Charles de Gaulle is the closest international airport.<br>
-      From there we recommend hiring a car or booking a taxi (approx. 1.5 hour drive).<br>
+      From there we recommend hiring a car or booking a taxi (approx. 1.5 hour drive)<br>
       Alternatively, there is a train from Paris St. Lazare to Val de Reuil (approx. 30 mins drive).<br></p>
       </div>
         <div class="col-sm">
@@ -70,5 +70,8 @@
       We will have a taxi service available for the weekend to shuttle between accommodation and the chateau.<br>
       We'll add the contact details for the taxi closer to the time.<br>
     </p>
+    <img class="Bottles" class="center" src="Images/footer.png" alt="footer" width=150px>
+    <br><br>
     </div>
+
   </body>
