--- a/the-plan.html
+++ b/the-plan.html
@@ -38,10 +38,10 @@
     <h2>The weekend</h2>
     <p>We have use of the château from Friday to Monday and would love for you to join us for the weekend if you can. <br><br>
       <h2>Saturday 28<sup>th</sup> August</h2>
-      <p>Château de Bonnemare, 27380 Radepont<br>
-        Ceremony at 2pm, aim to arrive by 1:30pm<br>
-        Dress code is summer garden party<br>
-        Dinner, drinks and dancing to follow, continuing into the night<br></p>
+      <p>- Château de Bonnemare, 27380 Radepont<br>
+        - Ceremony at 2pm, aim to arrive by 1:30pm<br>
+        - Dress code is summer garden party<br>
+        - Dinner, drinks and dancing to follow, continuing into the night<br></p>
 <br>
       <h2> Sunday 29<sup>th</sup> August</h2>
       <p>Blow away the cobwebs with a <br>
