--- a/accommodation.html
+++ b/accommodation.html
@@ -59,34 +59,39 @@
     <p>Les Rives de l’Andelle<br>
     27610 Romilly sur Andelle<br>
     <tel>(+33) 02 32 48 25 40<tel><br>
-    <a href="mailto:pascale.gerard12@orange.fr">pascale.gerard12@orange.fr</a></p>
+    <a href="mailto:pascale.gerard12@orange.fr">pascale.gerard12@orange.fr</a>
+    <a href="https://www.booking.com/hotel/fr/les-rives-de-l-39-andelle.fr.html#map_closed" target="_blank">Website link</a></p>
   </div>
   <div class="col-sm">
     <h3>2. Maison de Maître</h3>
     <p>Rue du Général De Gaulle<br>
     27380 Fleury sur Andelle<br>
     <tel>(+33) 06 77 67 14 77</tel><br>
-    <a href="sylviemasson27380@orange.fr">sylviemasson27380@orange.fr</a></p>
+    <a href="sylviemasson27380@orange.fr">sylviemasson27380@orange.fr</a>
+    <a href="a href="https://www.airbnb.com/rooms/26940246?s=67&unique_share_id=87dcc1d6-68ef-49be-b81b-f67dd6d0b1dd" target="_blank">Website link</a></p>
   </div>
   <div class="col-sm">
     <h3>3. Gîte de Charleval</h3>
     <p>47 Rue de la Fontaine Bulant<br>
      27380 Charleval<br>
      <tel>(+33) 02 32 49 20 48</tel><br>
-    <a href="mailto:liliane.lebaube@orange.fr">liliane.lebaube@orange.fr</a></p>
+    <a href="mailto:liliane.lebaube@orange.fr">liliane.lebaube@orange.fr</a>
+    <a href="http://www.gitedecharleval.sitew.com/" target="_blank">Website link</a></p>
   </div>
   <div class="col-sm">
   <h3>4. Gîte du Vanicol</h3>
   <p>14 rue des Rosiers<br>
   27440 Houville en Vexin<br>
 <tel>(+33) 02 32 39 53 38</tel><br>
+<a href="https://www.gites-de-france.com/en/normandie/eure/gite-du-vanicol-27g926" target="_blank">Website link</a></p>
 </div>
 <div class="col-sm">
   <h3>5. Le Clos du Boele</h3>
   <p>8 Place du Cloitre<br>
   27440 Ecouis<br>
   <tel>(+33) 09 54 08 33 70</tel><br>
-  <a href="mailto:leclosduboele@free.fr">leclosduboele@free.fr</a></p>
+  <a href="mailto:leclosduboele@free.fr">leclosduboele@free.fr</a>
+  <a href="https://www.gites-de-france.com/en/normandie/eure/le-clos-du-boele-27g6442" target="_blank">Website link</a></p>
 </div>
 </div>
     <br>
@@ -97,6 +102,7 @@
   27440 Ecouis<br>
   <tel>(+33) 02 32 69 59 76 </tel><br>
   <a href="mailto:carolinedesaintemarie@gmail.com">carolinedesaintemarie@gmail.com</a></p>
+  <a href="http://lamaisonblanche27.over-blog.com/" target="_blank">Website link</a></p>
 </div>
 <div class="col-sm">
   <h3>7. Château de Heuqeville</h3>
