--- a/travel.html
+++ b/travel.html
@@ -66,8 +66,8 @@
     <br>
     <h2>During the weekend</h2>
     <p>
-      There is parking available at the chateau.<br>
-      We will have a taxi service available for the weekend to shuttle between accommodation and the chateau.<br>
+      There is parking available at the château.<br>
+      We will have a taxi service on hand Saturday night.<br>
       We'll add the contact details for the taxi closer to the time.<br>
     </p>
     <img class="Bottles" class="center" src="Images/footer.png" alt="footer" width=150px>
