--- a/accommodation.html
+++ b/accommodation.html
@@ -90,7 +90,7 @@
   <p>8 Place du Cloitre<br>
   27440 Ecouis<br>
   <tel>(+33) 09 54 08 33 70</tel><br>
-  <a href="mailto:leclosduboele@free.fr">leclosduboele@free.fr</a>
+  <a href="mailto:leclosduboele@free.fr">leclosduboele@free.fr</a><br>
   <a href="https://www.gites-de-france.com/en/normandie/eure/le-clos-du-boele-27g6442" target="_blank">Website link</a></p>
 </div>
 </div>
@@ -101,7 +101,7 @@
   <p>19 route de Paris<br>
   27440 Ecouis<br>
   <tel>(+33) 02 32 69 59 76 </tel><br>
-  <a href="mailto:carolinedesaintemarie@gmail.com">carolinedesaintemarie@gmail.com</a></p>
+  <a href="mailto:carolinedesaintemarie@gmail.com">carolinedesaintemarie@gmail.com</a>
   <a href="http://lamaisonblanche27.over-blog.com/" target="_blank">Website link</a></p>
 </div>
 <div class="col-sm">
