--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
 
   <head>
-      <title>Emily and Ali Get Married</title>
+      <title>Emily and Ali Wedding</title>
       <link rel="stylesheet" type="text/css" href="bootstrap-css/bootstrap.css">
       <link rel="stylesheet" type="text/css" href="index.css">
       <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@100&display=swap" rel="stylesheet">
@@ -43,7 +43,7 @@
 <div class="container-sm">
     <p>We would love for you to join us for a weekend in the French countryside, to celebrate our wedding on Saturday 28th August.</p>
     <p>We appreciate that at the moment this feels quite ambitious, but we have our fingers crossed and remain optimistic that by the summer things will be better, and we'll be able to celebrate with all of you at the end of August. Fortunately, a lot of the nearby accommodation is fully refundable until closer to the time.</p>
-    <p>For now, we are planning as if it will go ahead and will let you know if anything changes.</p>
+    <p>For now, we are planning as if it will go ahead and will get in touch if anything changes.</p>
     <p>Emily & Ali<br>xx</p>
 <img class="Bottles" class="center" src="Images/Line_bottles.png" alt="Wedding Bottles" width=350px>
 </div>
