--- a/rsvp.html
+++ b/rsvp.html
@@ -34,7 +34,7 @@
     <h1>RSVP</h1>
   </div>
 <div class="container">
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSekUgITCuxkp_n_ujU50t7V_wTpVhHZ4V-4HQ_tG5EvCvV-5g/viewform?embedded=true" width="640" height="1220" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSekUgITCuxkp_n_ujU50t7V_wTpVhHZ4V-4HQ_tG5EvCvV-5g/viewform?embedded=true" width="640" height="1220" onLoad="window.scroll(0,0);" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   </div>
 
 Scroll to top!
