--- a/index.html
+++ b/index.html
@@ -31,20 +31,17 @@
 <body>
 <div class="container-fluid">
   <br>
-  <h1>We're Getting Married!</h1>
+  <h1>Wedding Postponed!</h1>
   <br>
-  <h2>28<sup>th</sup>- 29<sup>th</sup> August 2021</h2>
-  <h3>Château de Bonnemare<br>
-      Normandy, France</h3>
+  <h2>New date TBC</h2>
 </div>
 
 <br>
 
 <div class="container-sm">
-    <p>We would love for you to join us for a weekend in the French countryside, to celebrate our wedding on Saturday 28th August.</p>
-    <p>We appreciate that at the moment this feels quite ambitious, but we have our fingers crossed and remain optimistic that by the summer things will be better, and we'll be able to celebrate with all of you at the end of August. Fortunately, a lot of the nearby accommodation is fully refundable until closer to the time.</p>
-    <p>For now, we are planning as if it will go ahead and will get in touch if anything changes.</p>
-    <p>Emily & Ali<br>xx</p>
+    <p>Unfortunately, given the continued travel restrictions we have decided to postpone our wedding.</p>
+    <p>We will be in touch with details for a new date in due course.</p>
+    <p>Emily and Ali xx</p>
 <img class="Bottles" class="center" src="Images/Line_bottles.png" alt="Wedding Bottles" width=350px>
 </div>
 
