--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
 <body>
 <div class="container-fluid">
   <br>
-  <h1>Wedding Postponed!</h1>
+  <h1>Wedding We're Getting Married!</h1>
   <br>
-  <h2>New date TBC</h2>
+  <h2>Rescheduled to 1st October 2022</h2>
 </div>
 
 <br>
 
 <div class="container-sm">
-    <p>Unfortunately, given the continued travel restrictions we have decided to postpone our wedding.</p>
-    <p>We will be in touch with details for a new date in due course.</p>
+    <p>We're in the process of updating the site with new details.</p>
+    <p>We'll send out an e-mail when it's updated!'</p>
     <p>Emily and Ali xx</p>
 <img class="Bottles" class="center" src="Images/Line_bottles.png" alt="Wedding Bottles" width=350px>
 </div>
