--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
           <a class="nav-item nav-link" href="travel.html">Travel</a>
           <a class="nav-item nav-link" href="accommodation.html">Accommodation</a>
           <a class="nav-item nav-link" href="giftlist.html">Giftlist</a>
-          <a class="nav-item nav-link" href="rsvp.html">RSVP</a>
        </div>
       </div>
       </nav>
@@ -31,7 +30,7 @@
 <body>
 <div class="container-fluid">
   <br>
-  <h1>Wedding We're Getting Married!</h1>
+  <h1>We're Getting Married!</h1>
   <br>
   <h2>Rescheduled to 1st October 2022</h2>
 </div>
