--- a/accommodation.html
+++ b/accommodation.html
@@ -11,7 +11,7 @@
 </head>
 
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="index.html">Home</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -22,6 +22,7 @@
           <a class="nav-item nav-link" href="travel.html">Travel</a>
           <a class="nav-item nav-link active" href="accommodation.html">Accommodation<span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="giftlist.html">Giftlist</a>
+          <a class="nav-item nav-link" href="rsvp.html">RSVP</a>
         </div>
       </div>
     </nav>
@@ -194,6 +195,9 @@
     </div>
 </div>
 </div>
+<br>
+  <img class="Bottles" class="center" src="Images/footer.png" alt="footer" width=150px>
+  <br><br>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
