--- a/travel.html
+++ b/travel.html
@@ -11,7 +11,7 @@
   </head>
 
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="index.html">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -22,6 +22,7 @@
           <a class="nav-item nav-link active" href="travel.html">Travel <span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="accommodation.html">Accommodation</a>
           <a class="nav-item nav-link" href="giftlist.html">Giftlist</a>
+          <a class="nav-item nav-link" href="rsvp.html">RSVP</a>
  </div>
 </div>
 </nav>
@@ -40,7 +41,7 @@
   <div class="row">
     <div class="col-sm">
     <p><h3><i class="fas fa-plane"></i> Fly</h3>
-      Charles de Gaulle is the closest international airport.<br>
+      Charles de Gaulle is the closest airport.<br>
       From there we recommend hiring a car or booking a taxi (approx. 1.5 hour drive)<br>
       Alternatively, there is a train from Paris St. Lazare to Val de Reuil (approx. 30 mins drive).<br></p>
       </div>
