--- a/giftlist.html
+++ b/giftlist.html
@@ -11,7 +11,7 @@
   </head>
 
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="index.html">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -22,6 +22,7 @@
           <a class="nav-item nav-link" href="travel.html">Travel
           <a class="nav-item nav-link" href="accommodation.html">Accommodation</a>
           <a class="nav-item nav-link active" href="giftlist.html">Giftlist</a><span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="rsvp.html">RSVP</a>
  </div>
 </div>
 </nav>
