--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -22,29 +22,44 @@
           <a class="nav-item nav-link" href="travel.html">Travel</a>
           <a class="nav-item nav-link" href="accommodation.html">Accommodation</a>
           <a class="nav-item nav-link" href="giftlist.html">Giftlist</a>
+          <a class="nav-item nav-link" href="rsvp.html">RSVP</a>
        </div>
       </div>
       </nav>
         </header>
 
-<body>
-<div class="container-fluid">
-  <br>
-  <h1>We're Getting Married!</h1>
-  <br>
-  <h2>Rescheduled to 1st October 2022</h2>
-</div>
+  <body>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <div class="landing-image">
+        </div>
+      </div>
+    <div class="col-sm">
+      <div class="landing-page-text">
+        <h1>We're Getting Married!</h1>
+        <br>
+        <h2>1st October 2022</h2>
+        <h2>Château de Bonnemare, Normandy</h2>
+        <br>
+        <p></p>
+        <p>Needless to say, last year didn't quite go according to plan! We've rescheduled and hope you are able to join us to celebrate our wedding in October 2022.</p>
+        <p>Aside from the new date, our original plan remains largely unchanged. On this site you'll find <a href="the-plan.html">the plan</a> for the weekend and some tips for <a href="travel.html">travel</a> and <a href="accommodation.html">accommodation</a> .</p>
+        <p>We would appreciate if you can <a href="rsvp.html">RSVP</a> as soon as you can, at the latest by the end of July. We look forward to celebrating with you!</p>
+        <p>If you have any questions, please don't hesitate to contact us.</p>
+        <p>Best wishes,<br>
+          Emily and Ali xx</p>
+        <img class="Bottles" class="center" src="Images/footer.png" alt="Heart" width=150px>
+        <br><br>
+      </div>
+    </div>
+  </div>
 
-<br>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-<div class="container-sm">
-    <p>We're in the process of updating the site with new details.</p>
-    <p>We'll send out an e-mail when it's updated!'</p>
-    <p>Emily and Ali xx</p>
-<img class="Bottles" class="center" src="Images/Line_bottles.png" alt="Wedding Bottles" width=350px>
-</div>
+  </body>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
+  <footer> <br>
+  </footer>
