--- a/rsvp.html
+++ b/rsvp.html
@@ -11,7 +11,7 @@
   </head>
 
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="index.html">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -34,7 +34,8 @@
     <h1>RSVP</h1>
   </div>
 <div class="container">
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSekUgITCuxkp_n_ujU50t7V_wTpVhHZ4V-4HQ_tG5EvCvV-5g/viewform?embedded=true" width="640" height="1220" onLoad="window.scroll(0,0);" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScsJFX8yoV_zIUAb6G_tbFm30TtXzvGSiONxF4fVJ-6AXCN9w/viewform?embedded=true" width="640" height="1220" onLoad="window.scroll(0,0);" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   </div>
 
   </body>
