--- a/the-plan.html
+++ b/the-plan.html
@@ -11,7 +11,7 @@
   </head>
 
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="index.html">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -22,6 +22,7 @@
           <a class="nav-item nav-link" href="travel.html">Travel</a>
           <a class="nav-item nav-link" href="accommodation.html">Accommodation</a>
           <a class="nav-item nav-link" href="giftlist.html">Giftlist</a>
+          <a class="nav-item nav-link" href="rsvp.html">RSVP</a>
  </div>
 </div>
 </nav>
@@ -39,14 +40,15 @@
       <h2>Saturday 1<sup>st</sup> October 2022</h2>
       <p>- Château de Bonnemare, 27380 Radepont<br>
         - Ceremony at 2pm, aim to arrive by 1:30pm<br>
-        - Dress code is summer garden party<br>
+        - Dress code is relaxed wedding attire<br>
         - Dinner, drinks and dancing to follow, continuing into the night<br></p>
 <br>
       <h2> Sunday 2<sup>nd</sup> October 2022</h2>
-      <p>Blow away the cobwebs with a <br>
-        lunchtime BBQ and highland games.</p>
+      <p>Blow away the cobwebs with a lunchtime BBQ <br>
+        and highland games (weather permitting!)</p>
     </div>
-      <img class="Bottles" class="center" src="Images/footer.png" alt="footer" width=150px>
+      <img class="Bottles" class="center" src="Images/Line_bottles.png" alt="Wedding Bottles" width=350px>
+
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
