Contact us added
Contact us added

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <p>Needless to say, last year didn't quite go according to plan! We've rescheduled and hope you are able to join us to celebrate our wedding in October 2022.</p>
         <p>Aside from the new date, our original plan remains largely unchanged. On this site you'll find <a href="the-plan.html">the plan</a> for the weekend and some tips for <a href="travel.html">travel</a> and <a href="accommodation.html">accommodation</a> .</p>
         <p>We would appreciate if you can <a href="rsvp.html">RSVP</a> as soon as you can, at the latest by the end of July. We look forward to celebrating with you!</p>
-        <p>If you have any questions, please don't hesitate to contact us.</p>
+        <p>If you have any questions, please don't hesitate to <a href="mailto:emilyandali.wedding@gmail.com">contact us.</a></p>
         <p>Best wishes,<br>
           Emily and Ali xx</p>
         <img class="Bottles" class="center" src="Images/footer.png" alt="Heart" width=150px>
