--- a/the-plan.html
+++ b/the-plan.html
@@ -44,7 +44,7 @@
         - Dinner, drinks and dancing to follow, continuing into the night<br></p>
 <br>
       <h2> Sunday 2<sup>nd</sup> October 2022</h2>
-      <p>Blow away the cobwebs with a lunchtime BBQ <br>
+      <p>Blow away the cobwebs with a midday BBQ <br>
         and highland games (weather permitting!)</p>
     </div>
       <img class="Bottles" class="center" src="Images/Line_bottles.png" alt="Wedding Bottles" width=350px>
