--- a/rsvp.html
+++ b/rsvp.html
@@ -29,13 +29,16 @@
   </header>
 
   <body>
-  <div class="container-fluid">
+  <div class="container">
     <br>
     <h1>RSVP</h1>
+    <p>We would appreciate it if you can RSVP as soon as you can,
+    by the end of July at the latest. </p>
+      <p>If you have any questions, do not hesitate to contact us at:<br>
+         <a href="mailto:emilyandali.wedding@gmail.com">emilyandali.wedding@gmail.com</a>.</p>
   </div>
 <div class="container">
-
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScsJFX8yoV_zIUAb6G_tbFm30TtXzvGSiONxF4fVJ-6AXCN9w/viewform?embedded=true" width="640" height="1220" onLoad="window.scroll(0,0);" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScsJFX8yoV_zIUAb6G_tbFm30TtXzvGSiONxF4fVJ-6AXCN9w/viewform?embedded=true" width="100%" height="1220" onLoad="window.scroll(0,0);" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   </div>
 
   </body>
