--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
       <title>Emily and Ali Wedding</title>
       <link rel="stylesheet" type="text/css" href="bootstrap-css/bootstrap.css">
       <link rel="stylesheet" type="text/css" href="index.css">
-      <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@100&display=swap" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@300&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -43,9 +45,9 @@
         <h2>Château de Bonnemare, Normandy</h2>
         <br>
         <p></p>
-        <p>Needless to say, last year didn't quite go according to plan! We've rescheduled and hope you are able to join us to celebrate our wedding in October 2022.</p>
-        <p>Aside from the new date, our original plan remains largely unchanged. On this site you'll find <a href="the-plan.html">the plan</a> for the weekend and some tips for <a href="travel.html">travel</a> and <a href="accommodation.html">accommodation</a> .</p>
-        <p>We would appreciate if you can <a href="rsvp.html">RSVP</a> as soon as you can, at the latest by the end of July. We look forward to celebrating with you!</p>
+        <p>We hope you are able to join us in celebrating our wedding in October!</p>
+        <p>On this site you'll find <a href="the-plan.html">the plan</a> for the weekend and some tips for <a href="travel.html">travel</a> and <a href="accommodation.html">accommodation</a> .</p>
+        <p>We would appreciate it if you are able to <a href="rsvp.html">RSVP</a> as soon as you can, at the latest by the end of July. We look forward to celebrating with you!</p>
         <p>If you have any questions, please don't hesitate to <a href="mailto:emilyandali.wedding@gmail.com">contact us.</a></p>
         <p>Best wishes,<br>
           Emily and Ali xx</p>
