--- a/travel.html
+++ b/travel.html
@@ -60,7 +60,7 @@
       Portsmouth > Le Havre (+1.5 hour drive)<br>
       Portsmouth > Caen (+2 hour drive)<br></p>
 </div>
-</div>
+</div><br>
       If you are having any problems planning your journey, please let us know. We've done lots of research and can put you in touch with each other to share transfers!
   </div>
   <br>
