--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
   <head>
       <title>Emily and Ali Wedding</title>
+      <link rel="shortcut icon" type="image/ico" href="Images/favicon.ico"/>
       <link rel="stylesheet" type="text/css" href="bootstrap-css/bootstrap.css">
       <link rel="stylesheet" type="text/css" href="index.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
