--- a/the-plan.html
+++ b/the-plan.html
@@ -37,9 +37,7 @@
     </div>
   <div class="container">
     <br>
-    <h2>The weekend</h2>
-    <p>We have use of the château from Friday to Monday and would love for you to join us for the weekend if you can. <br><br>
-      <h2>Saturday 1<sup>st</sup> October 2022</h2>
+      <h2>Saturday 1<sup>st</sup> October 2022 - The Big Day</h2>
       <p>- Château de Bonnemare, 27380 Radepont<br>
         - Ceremony at 2pm, aim to arrive by 1:30pm<br>
         - Dress code is relaxed wedding attire<br>
