--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <title>Emily and Ali Wedding</title>
       <link rel="stylesheet" type="text/css" href="bootstrap-css/bootstrap.css">
       <link rel="stylesheet" type="text/css" href="index.css">
+      <link rel="icon" type="image/x-icon" href="/favicon.png">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@300&display=swap" rel="stylesheet">
@@ -45,8 +46,8 @@
         <h2>Château de Bonnemare, Normandy</h2>
         <br>
         <p></p>
-        <p>We hope you are able to join us in celebrating our wedding in October!</p>
-        <p>On this site you'll find <a href="the-plan.html">the plan</a> for the weekend and some tips for <a href="travel.html">travel</a> and <a href="accommodation.html">accommodation</a> .</p>
+        <p>We hope you are able to join us in celebrating our wedding on the first weekend in October!</p>
+        <p>Here you'll find <a href="the-plan.html">the plan</a> for the weekend and some tips for <a href="travel.html">travel</a> and <a href="accommodation.html">accommodation</a> .</p>
         <p>We would appreciate it if you are able to <a href="rsvp.html">RSVP</a> as soon as you can, at the latest by the end of July. We look forward to celebrating with you!</p>
         <p>If you have any questions, please don't hesitate to <a href="mailto:emilyandali.wedding@gmail.com">contact us.</a></p>
         <p>Best wishes,<br>
