--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
         <h2>Château de Bonnemare, Normandy</h2>
         <br>
         <p></p>
-        <p>We hope you are able to join us in celebrating our wedding on the first weekend in October!</p>
-        <p>Here you'll find <a href="the-plan.html">the plan</a> for the weekend and some tips for <a href="travel.html">travel</a> and <a href="accommodation.html">accommodation</a> .</p>
+        <p>We hope you are able to join us in celebrating our wedding on the first weekend in October! Here you'll find <a href="the-plan.html">the plan</a> for the weekend and some tips for <a href="travel.html">travel</a> and <a href="accommodation.html">accommodation</a> .</p>
         <p>We would appreciate it if you are able to <a href="rsvp.html">RSVP</a> as soon as you can, at the latest by the end of July. We look forward to celebrating with you!</p>
         <p>If you have any questions, please don't hesitate to contact us at <a href="mailto:emilyandali.wedding@gmail.com">emilyandali.wedding@gmail.com</a>.</p>
         <p>Best wishes,<br>
