--- a/the-plan.html
+++ b/the-plan.html
@@ -38,17 +38,22 @@
   <div class="container">
     <br>
       <h2>Saturday 1<sup>st</sup> October 2022 - The Big Day</h2>
-      <p>- Château de Bonnemare, 27380 Radepont<br>
+      <h3>Château de Bonnemare, 27380 Radepont</h3>
         - Ceremony at 2pm, aim to arrive by 1:30pm<br>
-        - Dress code is relaxed wedding attire<br>
-        - Dinner, drinks and dancing to follow, continuing into the night<br></p>
+        - Dinner, drinks and dancing to follow<br>
+        - Party winding down at 1am</p>
+        <p>Dress Code: Relaxed wedding attire<br>
+          For men: Anything goes from Chinos and Shirt, but feel free to wear Black Tie if you'd like! Bonus points for kilts.<br>
+          For women: Outfits of any colour / length. The ground where we'll have the ceremony and drinks is quite uneven<br>
+          so we do not recommend stiletto-style heels.<br>
+          There will be a cloakroom available if you want to bring spare layers / shoes, etc.<br>
 <br>
       <h2> Sunday 2<sup>nd</sup> October 2022</h2>
-      <p>Blow away the cobwebs with a midday BBQ <br>
-        and highland games (weather permitting!)</p>
-    </div>
-      <img class="Bottles" class="center" src="Images/Line_bottles.png" alt="Wedding Bottles" width=350px>
-
+      <p>Blow away the cobwebs with a midday BBQ and highland games (weather permitting!)<br>
+      Arrive anytime from 11am, with food served around midday</br></p>
+        <p>Dress code: Casual</p>
+      <img class="Bottles" class="center" src="Images/Line_bottles.png" alt="Wedding Bottles" width=200px>
+  </div>
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
