--- a/travel.html
+++ b/travel.html
@@ -68,11 +68,12 @@
     <br>
     <h2>During the weekend</h2>
     <p>
-      There is parking available at the château.<br>
       We will have a taxi service on hand Saturday night to shuttle guests back to accommodation between 10pm - 2am.<br>
-      If you need to travel outside of these times, and for all other trips to the chateau during the weekend, please organise your own taxis:<br>
-      Suggested companies are: <a href="https://taxisjaunes.fr">taxisjaunes.fr</a> and <a href="navetteprive.com">navetteprive.com</a> or search 'Taxis Rouen' for alternatives.<br>
-      <a href="mailto:emilyandali.wedding@gmail.com">Let us know</a> if you are having any issues!<br>
+      If you need to travel outside of these times, and for all other trips to the chateau during the weekend, please organise your own transport.<br>
+      There is parking available at the château or contact details for taxi companies below:<br>
+      <a href="https://taxisjaunes.fr">taxisjaunes.fr</a> and <a href="navetteprive.com">navetteprive.com</a> or search 'Taxis Rouen' for alternatives.<br>
+      <br>
+      Please let us know if you are having any issues!<br>
     </p>
     <img class="Bottles" class="center" src="Images/footer.png" alt="footer" width=150px>
     <br><br>
