--- a/travel.html
+++ b/travel.html
@@ -71,7 +71,7 @@
       We will have a taxi service on hand Saturday night to shuttle guests back to accommodation between 10pm - 2am.<br>
       If you need to travel outside of these times, and for all other trips to the chateau during the weekend, please organise your own transport.<br>
       There is parking available at the château or contact details for taxi companies below:<br>
-      <a href="https://taxisjaunes.fr">taxisjaunes.fr</a> and <a href="navetteprive.com">navetteprive.com</a> or search 'Taxis Rouen' for alternatives.<br>
+      <a href="https://taxisjaunes.fr">taxisjaunes.fr</a> (rouent9@gmail.com) and <a href="navetteprive.com">navetteprive.com</a> (navetteprive@gmail.com) or search 'Taxis Rouen' for alternatives.<br>
       <br>
       Please let us know if you are having any issues!<br>
     </p>
